2012-03-08  Václav Zeman  <vhaisman@gmail.com>

	* net.cc (call_gaa): New thread function to call GetAdaptersAddresses.
	(get_adapters_addresses): Call call_gaa.  If necessary, call it as
	child thread.  Explain why that's necessary.

2012-03-08  Václav Zeman  <vhaisman@gmail.com>

	* path.cc (readlink): Avoid calling strlen() twice.

2012-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* Throughout, replace usage of w32api's min with MIN from sys/param.h.

2012-03-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* pinfo.cc (_pinfo::dup_proc_pipe): Reorganize to provide more
	information for failing condition.
	(pinfo::wait): Pass name of function to dup_proc_pipe.  Eliminate error
	check for dup_proc_pipe since it never actually returned an error.
	* pinfo.h (_pinfo::dup_proc_pipe): Add an argument.
	* spawn.cc (child_info_spawn::worker): Pass name of function to
	dup_proc_pipe.

2012-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* glob.cc (MAXPATHLEN): Reinstantiate with a value of 8192.

2012-03-05  Denis Excoffier  <cygwin@Denis-Excoffier.org>

	* pinfo.cc (_pinfo::dup_proc_pipe): Fix order of arguments in debug
	output.

2012-03-05  Corinna Vinschen  <corinna@vinschen.de>

	* init.cc (dll_entry): Move wincap.init call back from here...
	* dcrt0.cc (dll_crt0_0): ...to here.

2012-03-05  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (enum fcwd_version_t): Move here from path.cc.
	(class fcwd_access_t): Ditto.  Only declare methods.
	(class cwdstuff): Move fast_cwd_ptr and fast_cwd_version from shared
	DLL section here.
	* path.cc: Keep fcwd_access_t method definitions.
	(fcwd_access_t::fast_cwd_version): New method.
	(find_fast_cwd_pointer): Change comment.  Mention test on W8CP.
	(cwdstuff::init): Initialize fast_cwd_ptr and fast_cwd_version.

2012-03-05  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::operator[]): Extend comment a bit more to
	explain previous patch.

2012-03-04  Corinna Vinschen  <corinna@vinschen.de>
